--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -13,5 +13,6 @@ platform = espressif32
 board = lolin_c3_mini
 framework = arduino
 lib_deps = 
-    sstaub/sACN@^1.1.0
-    fastled/FastLED@^3.9.4
+	sstaub/sACN@^1.1.0
+	fastled/FastLED@^3.9.4
+	bblanchon/ArduinoJson@^7.2.1
