--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,11 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:lolin_c3_mini]
+[env]
 platform = espressif32
-board = lolin_c3_mini
 framework = arduino
 lib_deps = 
 	sstaub/sACN@^1.1.0
 	fastled/FastLED@^3.9.4
 	bblanchon/ArduinoJson@^7.2.1
+
+[env:lolin_c3_mini]
+board = lolin_c3_mini
+
+[env:denky32]
+board = denky32
+monitor_speed = 115200
