--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 framework = arduino
 lib_deps = 
-	sstaub/sACN@^1.1.0
+	; sstaub/sACN@^1.1.0
 	fastled/FastLED@^3.9.4
 	bblanchon/ArduinoJson@^7.2.1
 
